<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/fragmentPerfil"
        android:name="com.example.tendacomics.Perfil"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|top"
        android:layout_margin="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/categiories"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonMangues"
            style="@style/EstilMain"
            android:text="@string/mangues" />

        <Button
            android:id="@+id/buttonComics"
            style="@style/EstilMain"
            android:text="@string/c_mics" />

        <Button
            android:id="@+id/buttonFigures"
            style="@style/EstilMain"
            android:text="@string/figures" />
    </LinearLayout>

    <fragment
        android:id="@+id/fragmentmenu"
        android:name="com.example.tendacomics.Menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom" />
</FrameLayout>
